--- a/src/client/modules/Main/Main.scss
+++ b/src/client/modules/Main/Main.scss
@@ -1,19 +1,30 @@
-.Main {
+@import '../../styles/imports';
+
+.main{
   text-align: center;
 
-  .Main-header {
+  &__header {
     background-color: #222;
     height: 150px;
     padding: 20px;
     color: white;
 
-    .Main-logo {
+    &-logo {
       animation: Main-logo-spin infinite 20s linear;
       height: 80px;
     }
+    &-title{
+      display: flex;
+      justify-content: center;
+    }
+    h2{
+      margin-left: 10px;
+      cursor: pointer;
+    }
   }
-  
-  .Main-intro {
-    font-size: large;
+
+  &__mode-disable{
+    color: $disable-color;
   }
+
 }
